// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoFactorAuthModal render should render with secret and QR code 1`] = `
<v-modal
  class="is-dark"
>
  Two Factor Authentication 
  <div>
    <p
      class="lead"
    >
      To protect your account, we strongly recommend enabling
      two factor authentication. Once enabled, you will be able to log in by
      entering a code generated by an authenticator app.
    </p>
     
    <p
      class="lead"
    >
      Scan the QR code below into 
      <strong>
        Google
        Authenticator
      </strong>
      . If you are unable to scan the code, you can
      also enter the secret manually.
    </p>
  </div>
   
  <v-form
    id="twoFactorAuth"
    v-on:submit="bound confirm"
  >
    <div
      class="field"
    >
      <div
        class="has-text-centered"
      >
        <img
          src="https://chart.googleapis.com/chart?chs=166x166&chld=L|0&cht=qr&chl=otpauth://totp/Endpass:email?secret=secret"
        />
      </div>
       
      <p
        class="subtitle"
      >
        Write down the recovery secret below:
      </p>
       
      <label
        class="label"
      >
        Secret
      </label>
       
      <p
        class="subtitle twofa-secret"
      >
        <strong>
          secret
        </strong>
      </p>
    </div>
     
    <p
      class="subtitle"
    >
      Enter the 6 digit code generated by your
      authenticator app.
    </p>
     
    <v-input
      label="Verification Code"
      name="verificationCode"
      size="6"
      type="number"
      v-model="code"
      validator="required|digits:6"
    />
  </v-form>
   
  <div
    class="buttons"
  >
    <v-button
      classname="is-primary is-medium"
      form="twoFactorAuth"
    >
      Verify
    </v-button>
  </div>
</v-modal>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 1`] = `
<v-modal
  class="is-dark"
>
  Two Factor Authentication 
  <!---->
   
  <v-form
    id="twoFactorAuth"
    v-on:submit="bound confirm"
  >
    <!---->
     
    <p
      class="subtitle"
    >
      Enter the 6 digit code generated by your
      authenticator app.
    </p>
     
    <v-input
      label="Verification Code"
      name="verificationCode"
      size="6"
      type="number"
      v-model="code"
      validator="required|digits:6"
    />
  </v-form>
   
  <div
    class="buttons"
  >
    <v-button
      classname="is-primary is-medium"
      form="twoFactorAuth"
    >
      Verify
    </v-button>
  </div>
</v-modal>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 2`] = `
<v-modal
  class="is-dark"
>
  Two Factor Authentication 
  <div>
    <p
      class="lead"
    >
      To protect your account, we strongly recommend enabling
      two factor authentication. Once enabled, you will be able to log in by
      entering a code generated by an authenticator app.
    </p>
     
    <p
      class="lead"
    >
      Scan the QR code below into 
      <strong>
        Google
        Authenticator
      </strong>
      . If you are unable to scan the code, you can
      also enter the secret manually.
    </p>
  </div>
   
  <v-form
    id="twoFactorAuth"
    v-on:submit="bound confirm"
  >
    <!---->
     
    <p
      class="subtitle"
    >
      Enter the 6 digit code generated by your
      authenticator app.
    </p>
     
    <v-input
      label="Verification Code"
      name="verificationCode"
      size="6"
      type="number"
      v-model="code"
      validator="required|digits:6"
    />
  </v-form>
   
  <div
    class="buttons"
  >
    <v-button
      classname="is-primary is-medium"
      form="twoFactorAuth"
    >
      Verify
    </v-button>
  </div>
</v-modal>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 3`] = `
<v-modal
  class="is-dark"
>
  Two Factor Authentication 
  <!---->
   
  <v-form
    id="twoFactorAuth"
    v-on:submit="bound confirm"
  >
    <!---->
     
    <p
      class="subtitle"
    >
      Enter the 6 digit code generated by your
      authenticator app.
    </p>
     
    <v-input
      label="Verification Code"
      name="verificationCode"
      size="6"
      type="number"
      v-model="code"
      validator="required|digits:6"
    />
  </v-form>
   
  <div
    class="buttons"
  >
    <v-button
      classname="is-primary is-medium"
      form="twoFactorAuth"
    >
      Verify
    </v-button>
  </div>
</v-modal>
`;
